# title-randomizer-rs

./: Cargo.toml  LICENSE  README.md  build.rs
randomizer_util/: randomizer_util.sln
randomizer_util/randomizer_util/: dllmain.cpp  framework.h  randomizer_util.vcxproj
src/: main.rs
src/randomizer/: mod.rs
ui/: app-window.slint
