[package]
name = "title-randomizer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
libloading = "0.8.7"
lazy_static = "1.5.0"
random-string = "1.1.0"
open = "5.3.2"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
]

[build-dependencies]
slint-build = "1.8.0"
winres = "0.1.12"